# strrange

./: .gitignore  README.md  check.sh  mkdocs.yml  pyproject.toml
.github/workflows/: loading-test-range.yml  pypi-test-publish.yml  test.yml
docs/: alphabet.md  index.md  license.md
manual-tests/: concat_generator.py  perf_repeating_chars.py  perf_sym_classes.py
strrange/: alphabet.py  concat.py
tests/: test_alphabet.py  test_auto.py  test_concat.py  test_gen.py  test_pattern.py  test_samples.py  test_util.py
tests/loading/: decorators.py  test_range.py
